--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.8.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.5",
+    "axios": "^1.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "tsc && node dist/index.js",
     "dev": "ts-node-dev --respawn -- src/index.ts"
+  },
+  "devDependencies": {
+    "prisma": "^5.8.1"
   }
 }
